# sqsproxyd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml
.github/workflows/: check-main-push.yaml  check-push.yaml  lint-dockerfile.yaml  push-dockerhub.yaml  release.yaml
docker/: Dockerfile
docker/sqs/: elasticmq.conf
env/: container.env  local.env  test.env
example/aws/: ecs_fargate_task_definition.json
example/kubernetes/: pod.yaml
integration/api/: Cargo.toml  Dockerfile
integration/api/src/: main.rs
integration/driver/: Cargo.toml  Dockerfile
integration/driver/src/: main.rs
src/: domain.rs  infra.rs  main.rs
src/app/: daemon.rs
src/domain/: arg.rs  config.rs  message.rs
src/infra/: api.rs  aws.rs  logger.rs  sqs.rs  webhook.rs
