[package]
name = "sqsproxyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-channel = "1.6"
async-trait = "0.1"
aws-config = "0.4.0"
aws-sdk-sqs = "0.4.0"
aws-types = { version = "0.4.0", features = ["hardcoded-credentials"]}
dotenv = "0.15"
envy = "0.4"
http = "0.2"
md5 = "0.7"
mockall = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]
