[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6.0"
aws-sdk-sqs = "0.6.0"
http = "0.2"
serde = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
